# tinydi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  test_diny.py  test_tinydi.py  tests.py  tinydi.py
.claude/skills/release/references/: cmd-release.md  troubleshooting.md
.github/workflows/: release.yml
examples/: cli.py  polymorphism.py  testing.py  web_request.py
