[project]
name = "tinydi"
version = "0.1.0"
description = "Dependency injection in 180 lines. Annotations, not containers."
authors = [{ name = "Tyler Payne" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "uv-release; python_version >= '3.11'",
    "pyyaml; python_version >= '3.11'",
]

[tool.hatch.build.targets.wheel]
only-include = ["tinydi.py"]

[tool.uvr.config]
workflow_version = "0.29.0"
