[project]
name = "diny"
version = "0.1.0"
description = "Dead simple dependency injection for python."
authors = [{ name = "Tyler Payne" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "uv-release; python_version >= '3.11'",
    "pyyaml; python_version >= '3.11'",
    "ruff>=0.15.11",
    "ty>=0.0.32",
    "poethepoet>=0.37.0",
    "pytest>=8.4.2",
]

[tool.hatch.build.targets.wheel]
only-include = ["diny.py"]

[tool.uvr.config]
workflow_version = "0.29.0"
skill_version = "0.29.0"

[tool.uvr.publish]
index = "pypi"
environment = "pypi"
trusted-publishing = "always"
include = []
exclude = []

[tool.poe.tasks]
"fix:formatting" = "ruff format ."
"fix:code" = "ruff check --fix ."
"check:code" = "ruff check ."
"check:types" = "ty check ."
"test:unit" = "pytest"

[tool.poe.tasks.fix]
sequence = ["fix:formatting", "fix:code"]
default_item_type = "ref"

[tool.poe.tasks.check]
sequence = ["check:code", "check:types"]
default_item_type = "ref"

[tool.poe.tasks.test]
sequence = ["test:unit"]
default_item_type = "ref"
